# sealos-django-postgresql-example

./: Dockerfile  manage.py  pyproject.toml
.github/workflows/: build-image.yml
.sealos/: analysis.json  state.json
.sealos/template/: index.yaml
config/: settings.py  urls.py
evidence/: package-provenance.v1.json  source-closure.v1.json
practice/: models.py  urls.py  views.py
practice/migrations/: 0001_initial.py
practice/tests/: test_health.py  test_items.py  test_migrations.py
